// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Bucket: Grid renders correctly with all props 1`] = `
<div
  className="b-grid "
  style={
    Object {
      "--grid-col-laptop": "1fr 1fr",
      "--grid-col-phone": "1fr 1fr",
      "--grid-col-screen": "1fr 1fr",
      "--grid-col-tablet": "1fr 1fr",
      "--grid-gap-laptop": "var(--gutter-medium)",
      "--grid-gap-phone": "var(--gutter-medium)",
      "--grid-gap-screen": "var(--gutter-medium)",
      "--grid-gap-tablet": "var(--gutter-medium)",
    }
  }
>
  <div>
    col 1
  </div>
  <div>
    col 2
  </div>
</div>
`;

exports[`Bucket: Grid renders correctly without any props 1`] = `
<div
  className="b-grid "
  style={
    Object {
      "--grid-col-laptop": undefined,
      "--grid-col-phone": undefined,
      "--grid-col-screen": undefined,
      "--grid-col-tablet": undefined,
      "--grid-gap-laptop": undefined,
      "--grid-gap-phone": undefined,
      "--grid-gap-screen": undefined,
      "--grid-gap-tablet": undefined,
    }
  }
>
  <div>
    col 1
  </div>
  <div>
    col 2
  </div>
</div>
`;
